# familybook-cli

./: .gitignore  README.md  familybook.app.json.example  familybook.py  familybook_app.py  familybook_book.py  familybook_db.py  familybook_gedcom.py  familybook_mirror.py  familybook_tree.py  requirements-build.txt  run_familybook.sh
desktop/: package-lock.json  package.json
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/icons/: icon.icns
desktop/src-tauri/src/: main.rs
desktop/web/: index.html
docs/: api_endpoints.md  desktop_packaging.md  rust_migration_handoff_01.md  rust_migration_plan.md  visual_style_guide.md
prompts/: familybook_context.md
scripts/: build_desktop.ps1  build_desktop.sh  build_native_extensions.py  build_sidecar.py  check_desktop_prereqs.py  macos_make_dmg.sh  prepare_ui_release.py  sign_release.sh
ui/: app.js  index.html  styles.css
