[package]
name = "familybook_desktop"
version = "0.1.0"
description = "Familybook desktop shell"
authors = ["Familybook"]
edition = "2021"
rust-version = "1.77.2"
build = "build.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
